--- a/PortfolioBackend/wwwroot/Contact.html
+++ b/PortfolioBackend/wwwroot/Contact.html
@@ -514,17 +514,17 @@
     <header class="header">
         <div class="header-content">
             <h1>Get In Touch</h1>
-            <p>Ready to transform your business with our innovative IT solutions? Let's start a conversation about your project needs.</p>
+            <p>Let's connect! Whether you have questions about my projects, want to collaborate, or explore opportunities together.</p>
         </div>
     </header>
 
     <div class="container">
         <section class="contact-section">
             <div class="contact-form-card">
-                <h2 class="section-title">Send us a Message</h2>
+                <h2 class="section-title">Send me a Message</h2>
                 
                 <div class="success-message" id="success-message">
-                    <i class="fas fa-check-circle"></i> Thank you! Your message has been sent successfully. We'll get back to you soon.
+                    <i class="fas fa-check-circle"></i> Thank you! Your message has been sent successfully. I'll get back to you soon.
                 </div>
                 
                 <div class="error-message" id="error-message">
@@ -549,7 +549,7 @@
 
                     <div class="form-group">
                         <label for="message" class="form-label">Message *</label>
-                        <textarea id="message" name="message" class="form-control" required placeholder="Tell us about your project or how we can help you..."></textarea>
+                        <textarea id="message" name="message" class="form-control" required placeholder="Tell me about your project, questions, or how we can collaborate..."></textarea>
                     </div>
 
                     <button type="submit" class="btn" id="submit-btn">
@@ -568,9 +568,9 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <div class="contact-details">
-                            <h3>Email Us</h3>
-                            <p>info@codenex.solutions</p>
-                            <p>support@codenex.solutions</p>
+                            <h3>Email Me</h3>
+                            <p>bc220201051aay@vu.edu.pk</p>
+                            <p>Available for inquiries & opportunities</p>
                         </div>
                     </div>
 
@@ -579,9 +579,9 @@
                             <i class="fas fa-phone"></i>
                         </div>
                         <div class="contact-details">
-                            <h3>Call Us</h3>
-                            <p>+1 (555) 123-4567</p>
-                            <p>Mon-Fri 9:00 AM - 6:00 PM EST</p>
+                            <h3>Call Me</h3>
+                            <p>+923354150415</p>
+                            <p>Available for consultations</p>
                         </div>
                     </div>
 
@@ -590,9 +590,9 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="contact-details">
-                            <h3>Visit Us</h3>
-                            <p>123 Innovation Drive</p>
-                            <p>Tech City, TC 12345</p>
+                            <h3>Location</h3>
+                            <p>Virtual University Gojra Campus</p>
+                            <p>Gojra, Punjab, Pakistan</p>
                         </div>
                     </div>
 
@@ -601,28 +601,25 @@
                             <i class="fas fa-clock"></i>
                         </div>
                         <div class="contact-details">
-                            <h3>Business Hours</h3>
-                            <p>Monday - Friday: 9:00 AM - 6:00 PM</p>
-                            <p>Saturday: 10:00 AM - 4:00 PM</p>
+                            <h3>Availability</h3>
+                            <p>Available for consultations & meetings</p>
+                            <p>Flexible schedule for projects</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="social-links">
-                    <a href="#" class="social-link" title="Facebook">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="#" class="social-link" title="LinkedIn">
+                    <a href="https://www.linkedin.com/in/syed-ali-ayyaz-270638269" class="social-link" title="LinkedIn" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="#" class="social-link" title="Twitter">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="#" class="social-link" title="YouTube">
+                    <a href="https://www.youtube.com/@AliAyyazVU" class="social-link" title="YouTube" target="_blank">
                         <i class="fab fa-youtube"></i>
                     </a>
-                    <a href="#" class="social-link" title="GitHub">
+                    <a href="https://github.com/ayyaz081" class="social-link" title="GitHub" target="_blank">
                         <i class="fab fa-github"></i>
+                    </a>
+                    <a href="mailto:bc220201051aay@vu.edu.pk" class="social-link" title="Email">
+                        <i class="fas fa-envelope"></i>
                     </a>
                 </div>
             </div>
@@ -633,14 +630,14 @@
 
         <section class="map-section">
             <div class="map-header">
-                <h2>Find Us on the Map</h2>
-                <p>Located in the heart of the tech district, we're easily accessible by public transport and have ample parking.</p>
+                <h2>Find Me on the Map</h2>
+                <p>Located at Virtual University Gojra Campus, Punjab, Pakistan. Available for consultations and meetings.</p>
             </div>
             <div class="map-container" id="map-container">
                 <div>
                     <i class="fas fa-map-marker-alt" style="font-size: 2rem; color: var(--primary); margin-bottom: 16px;"></i>
-                    <p>Interactive map would be embedded here</p>
-                    <p style="font-size: 0.9rem; margin-top: 8px;">123 Innovation Drive, Tech City, TC 12345</p>
+                    <p>Loading interactive map...</p>
+                    <p style="font-size: 0.9rem; margin-top: 8px;">Pakistan</p>
                 </div>
             </div>
         </section>
@@ -773,18 +770,30 @@
 
         // Authentication is now handled by shared components
 
-        // Simulate map loading (in a real app, you'd integrate with Google Maps, etc.)
+        // Load the Google Maps embed focused on Virtual University Gojra campus
         setTimeout(() => {
             const mapContainer = document.getElementById('map-container');
+            // Updated coordinates for Virtual University Gojra, Punjab, Pakistan
             mapContainer.innerHTML = `
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.2412648750455!2d-73.98656268459394!3d40.75895017932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1635959872987!5m2!1sen!2sus" 
+                    src="https://maps.google.com/maps?q=Virtual+University+Gojra+Punjab+Pakistan+PGJR002&hl=en&z=16&output=embed" 
                     width="100%" 
                     height="100%" 
                     style="border:0; border-radius: 8px;" 
                     allowfullscreen="" 
-                    loading="lazy">
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade" 
+                    title="Virtual University Gojra Campus Location">
                 </iframe>
+                <div style="margin-top: 16px; text-align: center;">
+                    <a href="https://maps.app.goo.gl/zf8LwNbv4wSxDRBT9" 
+                       target="_blank" 
+                       style="color: var(--primary); text-decoration: none; font-weight: 600; display: inline-flex; align-items: center; gap: 8px; padding: 8px 16px; border-radius: 8px; background: var(--glass-bg); border: 1px solid var(--glass-border); transition: all 0.3s ease;" 
+                       onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(59, 130, 246, 0.3)';" 
+                       onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">
+                        <i class="fas fa-map-marker-alt"></i> View Virtual University Gojra Campus
+                    </a>
+                </div>
             `;
         }, 1500);
     </script>
