publishing profiles created

--- a/PortfolioBackend/wwwroot/Home.html
+++ b/PortfolioBackend/wwwroot/Home.html
@@ -468,21 +468,21 @@
                 <div class="carousel-content">
                     <h2>Transform Your IT Infrastructure</h2>
                     <p>Seamlessly migrate to the cloud with Codenex Solutions' scalable solutions.</p>
-                    <a href="https://codenex.solutions/about" class="cta-button">Explore More</a>
+                    <a href="About.html" class="cta-button">Explore More</a>
                 </div>
             </div>
             <div class="carousel-slide" style="background-image: url('/content/secure.png');">
                 <div class="carousel-content">
                     <h2>Secure Your Digital Assets</h2>
                     <p>Robust cybersecurity solutions tailored to protect your business.</p>
-                    <a href="https://codenex.solutions/about" class="cta-button">Explore More</a>
+                    <a href="About.html" class="cta-button">Explore More</a>
                 </div>
             </div>
             <div class="carousel-slide" style="background-image: url('/content/analytics.jpg');">
                 <div class="carousel-content">
                     <h2>Harness AI-Driven Insights</h2>
                     <p>Leverage data analytics to drive smarter business decisions.</p>
-                    <a href="https://codenex.solutions/about" class="cta-button">Explore More</a>
+                    <a href="About.html" class="cta-button">Explore More</a>
                 </div>
             </div>
         </div>
@@ -546,7 +546,8 @@
     <!-- Footer will be loaded by JavaScript -->
     <div id="footer-placeholder"></div>
 
-    <!-- Include shared components JavaScript -->
+    <!-- Include configuration and shared components JavaScript -->
+    <script src="/js/config.js"></script>
     <script src="/js/shared-components.js"></script>
     <script>
         // Home page specific JavaScript
