--- a/PortfolioBackend/wwwroot/Admin.html
+++ b/PortfolioBackend/wwwroot/Admin.html
@@ -924,7 +924,7 @@
                     <button class="theme-toggle" id="themeToggle">
                         <i class="fas fa-moon"></i>
                     </button>
-                    <a href="/Home.html" id="backToWebsiteBtn" class="btn btn-secondary" style="padding: 8px 12px; font-size: 0.9rem; text-decoration: none; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease;" title="Go back to main website" onmouseover="this.style.transform='translateY(-1px)'" onmouseout="this.style.transform='translateY(0)'">
+                    <a href="/index.html" id="backToWebsiteBtn" class="btn btn-secondary" style="padding: 8px 12px; font-size: 0.9rem; text-decoration: none; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease;" title="Go back to main website" onmouseover="this.style.backgroundColor='#5a6268'; this.style.borderColor='#545b62';" onmouseout="this.style.backgroundColor='#6c757d'; this.style.borderColor='#6c757d';">
                         <i class="fas fa-home"></i> Back to Website
                     </a>
                     <button class="btn btn-danger" style="padding: 8px 12px; font-size: 0.9rem;" onclick="logout()">
