--- a/PortfolioBackend/wwwroot/Contact.html
+++ b/PortfolioBackend/wwwroot/Contact.html
@@ -32,7 +32,7 @@
 
 
         .header {
-            background: url('https://localhost:7151/content/contact-hero.jpg') center/cover;
+            background: url('/content/contact-hero.jpg') center/cover;
             height: 500px;
             display: flex;
             align-items: center;
