--- a/PortfolioBackend/wwwroot/SearchResults.html
+++ b/PortfolioBackend/wwwroot/SearchResults.html
@@ -460,7 +460,7 @@
             
             // Fallback to dynamic detection
             if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
-                return window.location.protocol === 'https:' ? 'https://localhost:7151' : 'http://localhost:7150';
+                return 'http://localhost:7150';
             }
             
             // Production: use same protocol and hostname
