--- a/wwwroot/Auth.html
+++ b/wwwroot/Auth.html
@@ -476,12 +476,12 @@
         <div class="nav-container">
             <!-- Left: Company Name -->
             <div class="nav-left">
-                <a href="index.html" class="nav-logo">Codenex Solutions</a>
+                <a href="/" class="nav-logo">Codenex Solutions</a>
             </div>
             
             <!-- Right: Back to Home and Theme Toggle -->
             <div class="nav-right">
-                <a href="index.html" class="back-btn">
+                <a href="/" class="back-btn">
                     <i class="fas fa-home"></i>
                     Back to Home
                 </a>
@@ -665,7 +665,7 @@
                 Sign Out
             </button>
 
-            <a href="index.html" class="btn btn-success" id="home-btn">
+            <a href="/" class="btn btn-success" id="home-btn">
                 <i class="fas fa-home"></i>
                 Go to Home
             </a>
@@ -918,10 +918,10 @@
             document.getElementById('dashboard-btn').addEventListener('click', () => {
                 const userInfo = JSON.parse(localStorage.getItem('userInfo') || '{}');
                 if (userInfo.role === 'Admin') {
-                    window.location.href = 'Admin.html';
+                    window.location.href = '/Admin';
                 } else {
                     // Non-admin users should not access dashboard - redirect to home
-                    window.location.href = 'index.html';
+                    window.location.href = '/';
                 }
             });
         }
