--- a/wwwroot/EmailVerified.html
+++ b/wwwroot/EmailVerified.html
@@ -63,7 +63,7 @@
         <div class="success-icon">✓</div>
         <h1>Email Verified Successfully!</h1>
         <p>Your email address has been verified. You can now log in to your Portfolio account.</p>
-        <a href="/Frontend/Login.html" class="btn">Go to Login</a>
+        <a href="/Auth" class="btn">Go to Login</a>
     </div>
 
     <script>
@@ -94,7 +94,7 @@
                         <div class="success-icon">✗</div>
                         <h1>Verification Failed</h1>
                         <p>The verification link is invalid or has expired. Please try registering again.</p>
-                        <a href="/Frontend/Register.html" class="btn">Go to Register</a>
+                        <a href="/Auth" class="btn">Go to Register</a>
                     </div>
                 `;
             });
@@ -105,7 +105,7 @@
                     <div class="success-icon">✗</div>
                     <h1>Invalid Link</h1>
                     <p>This verification link appears to be invalid.</p>
-                    <a href="/Frontend/Register.html" class="btn">Go to Register</a>
+                    <a href="/Auth" class="btn">Go to Register</a>
                 </div>
             `;
         }
