--- a/wwwroot/Products.html
+++ b/wwwroot/Products.html
@@ -1819,7 +1819,7 @@
                     window.location.href = `Publications#publication-${id}`;
                     break;
                 case 'solution':
-                    window.location.href = `solutions.html?id=${id}`;
+                    window.location.href = `/solutions?id=${id}`;
                     break;
                 case 'repository':
                     window.location.href = `Repository#repo-${id}`;
