--- a/wwwroot/Auth.html
+++ b/wwwroot/Auth.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/x-icon" href="/components/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/shared-styles.css">
+    <!-- Load scripts early to avoid loading timing issues -->
+    <script src="/js/config.js"></script>
+    <script src="/js/shared-components.js"></script>
     <style>
         body {
             background: var(--bg);
