--- a/wwwroot/Repository.html
+++ b/wwwroot/Repository.html
@@ -868,7 +868,7 @@
         }
         
         const backendBaseUrl = getBackendBaseUrl();
-        const repositoryApiUrl = `${backendBaseUrl}/api/repositories`;
+        const repositoryApiUrl = `${backendBaseUrl}/api/repository`;
 
         let currentPage = 1;
         let pageSize = 12;
