--- a/wwwroot/About.html
+++ b/wwwroot/About.html
@@ -943,7 +943,7 @@
     <section class="cta-section">
         <div class="container">
             <h2 class="section-title">Ready to Partner with Codenex?</h2>
-            <a href="https://codenex.solutions/contact" class="cta-button">
+            <a href="/Contact" class="cta-button">
                 <i class="fas fa-calendar-check"></i> Schedule a Free Audit
             </a>
         </div>
