--- a/wwwroot/Repository.html
+++ b/wwwroot/Repository.html
@@ -1713,8 +1713,7 @@
     <!-- Footer will be loaded by JavaScript -->
     <div id="footer-placeholder"></div>
 
-    <!-- Stripe.js for payment processing -->
-    <script src="https://js.stripe.com/v3/"></script>
+    <!-- Stripe.js already loaded in head section -->
     
     <!-- Include shared components JavaScript -->
     <script src="/js/shared-components.js"></script>
