--- a/wwwroot/Auth.html
+++ b/wwwroot/Auth.html
@@ -10,6 +10,7 @@
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
           crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/shared-styles.css?v=1.4">
+    <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="/css/auth.css?v=1.4">
 </head>
 <body>
@@ -216,6 +217,8 @@
     <!-- Load configuration and shared components -->
     <script src="/js/config.js"></script>
     <script src="/js/shared-components.js"></script>
+    <!-- Include animations -->
+    <script src="/js/animations.js"></script>
     <script src="/js/auth.js"></script>
 
     <!-- Footer will be loaded by JavaScript -->
