--- a/wwwroot/Privacy-Policy.html
+++ b/wwwroot/Privacy-Policy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,182 +7,9 @@
     <link rel="icon" type="image/x-icon" href="/components/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/shared-styles.css">
-    <style>
-        .privacy-header {
-            background: linear-gradient(135deg, var(--primary), var(--accent));
-            height: 300px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            color: #fff;
-            text-align: center;
-            margin-bottom: 40px;
-            border-radius: 0 0 20px 20px;
-            overflow: hidden;
-        }
-
-        .privacy-header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1));
-            z-index: 1;
-        }
-
-        .privacy-header-content {
-            position: relative;
-            z-index: 2;
-            max-width: 800px;
-            padding: 40px;
-            background: var(--glass-bg);
-            backdrop-filter: var(--glass-blur);
-            border: 1px solid var(--glass-border);
-            border-radius: 16px;
-            box-shadow: var(--glass-shadow);
-        }
-
-        .privacy-header-content h1 {
-            font-size: 3rem;
-            font-weight: 800;
-            margin-bottom: 16px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 16px;
-        }
-
-        .privacy-header-content p {
-            font-size: 1.25rem;
-            opacity: 0.9;
-        }
-
-        .privacy-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 24px 40px;
-        }
-
-        .privacy-section {
-            background: var(--glass-bg);
-            backdrop-filter: var(--glass-blur);
-            border: 1px solid var(--glass-border);
-            border-radius: 16px;
-            padding: 40px;
-            margin-bottom: 32px;
-            box-shadow: var(--glass-shadow);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .privacy-section::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, rgba(255,255,255,0.05), rgba(255,255,255,0.02));
-            z-index: -1;
-        }
-
-        .privacy-section h2 {
-            font-size: 2rem;
-            font-weight: 700;
-            margin-bottom: 24px;
-            color: var(--primary);
-            display: flex;
-            align-items: center;
-            gap: 12px;
-        }
-
-        .privacy-section h3 {
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin: 24px 0 16px;
-            color: var(--text);
-        }
-
-        .privacy-section p {
-            font-size: 1rem;
-            line-height: 1.7;
-            color: var(--text-light);
-            margin-bottom: 16px;
-        }
-
-        .privacy-section ul {
-            margin: 16px 0;
-            padding-left: 24px;
-        }
-
-        .privacy-section li {
-            font-size: 1rem;
-            line-height: 1.7;
-            color: var(--text-light);
-            margin-bottom: 8px;
-        }
-
-        .contact-info {
-            background: var(--glass-bg);
-            backdrop-filter: var(--glass-blur);
-            border: 1px solid var(--glass-border);
-            border-radius: 12px;
-            padding: 24px;
-            margin-top: 24px;
-            box-shadow: var(--glass-shadow);
-        }
-
-        .contact-info h3 {
-            color: var(--primary);
-            margin-bottom: 16px;
-        }
-
-        .contact-info p {
-            margin-bottom: 8px;
-        }
-
-        .contact-info a {
-            color: var(--primary);
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .contact-info a:hover {
-            color: var(--primary-dark);
-            text-decoration: underline;
-        }
-
-        .last-updated {
-            text-align: center;
-            color: var(--text-muted);
-            font-size: 0.9rem;
-            margin-top: 40px;
-            padding: 20px;
-            background: var(--glass-bg);
-            backdrop-filter: var(--glass-blur);
-            border: 1px solid var(--glass-border);
-            border-radius: 12px;
-            box-shadow: var(--glass-shadow);
-        }
-
-        @media (max-width: 768px) {
-            .privacy-header-content h1 {
-                font-size: 2.5rem;
-            }
-            
-            .privacy-section {
-                padding: 24px;
-            }
-            
-            .privacy-section h2 {
-                font-size: 1.75rem;
-            }
-        }
-    </style>
-</head>
+    <link rel="stylesheet" href="/css/animations.css">
+    <link rel="stylesheet" href="/css/privacy-policy.css">
+    </head>
 <body>
     <!-- Header Placeholder -->
     <div id="header-placeholder"></div>
@@ -348,7 +175,9 @@
 
     <!-- Load shared components -->
     <script src="/js/shared-components.js"></script>
-    <script>
+    <!-- Include animations -->
+    <script src="/js/animations.js"></script>
+</body>
         document.addEventListener('DOMContentLoaded', function() {
             loadHeader();
             loadFooter();
